# Cog-Isolated-Lending

./: .coverage  .coveragerc  .gitignore  README.md  ape-config.yaml  foundry.toml  pyproject.toml
.github/workflows/: ci.yml
abis/: CogPair.json  stETH.json  stETHUSDC.json
cog/: networks.json  package.json  schema.graphql  subgraph.yaml
cog/abis/: MockstETH.json
cog/src/: cog-pair.ts  mockst-eth.ts
cog/tests/: cog-pair-utils.ts  cog-pair.test.ts  mockst-eth-utils.ts  mockst-eth.test.ts
cog1/: README.md  networks.json  package.json  schema.graphql  subgraph.yaml
cog1/abis/: CogFactory.json  CogPair.json  (+1 more)
deploy_env/: README.md  pyproject.toml
deploy_env/src/deploy_env/: __init__.py
deployments/: mainnet.md  sepolia.md
htmlcov/: d_9d9be7781d2ca10f_cog_factory_vy.html  d_9d9be7781d2ca10f_cog_pair_vy.html  d_fbb36436530a56c0_mock_erc20_vy.html  d_fbb36436530a56c0_mock_oracle_vy.html  d_fbb36436530a56c0_mock_tick_math_vy.html  index.html  status.json
scripts/: Deployments.md  deploy-prod.py  deploy-sepolia.py  deploy.py
src/: ICogPair.sol  cog_factory.vy  cog_pair.vy  fuse_box.vy  loan_router.vy
test/: AccrueTests.t.sol  AssetPairTest.t.sol  BorrowPairTest.t.sol  CogPairUtil.t.sol  CollateralPairTest.t.sol  OraclePairTest.t.sol  RepayPairTest.t.sol
test_env/: README.md  pyproject.toml
test_env/src/test_env/: __init__.py
tests/: Invariants.md  fixtures.py  test_CogPairFuzz.py  test_borrow_invariants.py  test_collateral_invariants.py  test_erc20_interface.py  test_erc4626_interface.py  test_liquidation_invariants.py  test_profiling.py  test_protocol_fees.py  test_repay_invariants.py  test_tick_math.py  wip_CogPairFuzz.py
tests_forked/: conftest.py  test_ambient_integration_tests.py  test_pool_configured_properly.py  utils.py
utils/: blueprint.py
vyper_contracts/: cog_factory.vy  cog_high_pair.vy  cog_low_pair.vy  cog_medium_pair.vy  cog_pair.vy  cog_pair_abi.json  cog_stable_pair.vy  fuse_box.vy  vyper_template.py
(+70 files in other folders)
