[tool.poetry]
name = "deploy-env"
version = "0.1.0"
description = ""
authors = ["ControlCplusControlV <44706811+ControlCplusControlV@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "deploy_env"}]

[tool.poetry.dependencies]
python = "^3.10"
eth-ape = "^0.6.11"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
