[project]
name = "deploy-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ControlCplusControlV", email = "44706811+ControlCplusControlV@users.noreply.github.com" }
]
dependencies = [
    "eth-ape>=0.6.13",
    "colorama>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
