[project]
name = "test-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ControlCplusControlV", email = "44706811+ControlCplusControlV@users.noreply.github.com" }
]
dependencies = [
    "titanoboa>=0.1.7",
    "hypothesis>=6.81.2",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
readme = "README.md"
requires-python = "3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
